--- a/index.html
+++ b/index.html
@@ -1,39 +1,11 @@
 <!DOCTYPE html>
-<html lang="sp">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Homriga</title>
-    <link rel="icon" href="img/ICONO PAGINA WEB.png">
+    <title>Document</title>
 </head>
 <body>
-    <div id="contenedor">
-        <div class="logo">
-            <img src="./img/hormiga 2.jpeg" alt="logo">
-        </div>
-        <div class="somos">
-            <h1>GIVE</h1>
-            <hr>
-            <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, pariatur mollitia nemo velit fuga molestias sunt eaque officia aperiam expedita odio quibusdam iure consequuntur, deserunt harum, hic inventore nostrum dolor.</p>
-        </div>
-        <div class="producto1">
-            <a href="">
-                <img src="./img/hormiga bala.jpg" alt="Ropa">
-            </a>
-        </div>
-        <div class="producto2">
-            <a href="">
-                <img src="./img/hormiga carpintera.jpg" alt="Almuerzos o cenas">
-            </a>
-        </div>
-        <div class="producto3">
-            <a href="">
-                <img src="./img/hormiga roja.jpeg" alt="Accesorios">
-            </a>
-        </div>
-    </div>
+    
 </body>
 </html>
