--- a/index.html
+++ b/index.html
@@ -6,6 +6,126 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <div style="width: 100%; height: 100%; position: relative; background: #F5F5F5">
+        <div style="width: 1160.70px; height: 40px; padding-top: 5px; left: 140px; top: 26px; position: absolute; justify-content: center; align-items: center; gap: 730px; display: inline-flex">
+            <div style="justify-content: flex-start; align-items: flex-start; gap: 36px; display: inline-flex">
+                <div style="flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
+                    <div style="color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">Home</div>
+                    <div style="width: 65px; height: 0px"></div>
+                </div>
+                <div style="color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">About</div>
+                <div style="color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">Contact</div>
+            </div>
+            <div style="justify-content: flex-end; align-items: center; gap: 42px; display: inline-flex">
+                <div style="width: 19.69px; height: 16px; background: black"></div>
+                <div style="width: 12px; height: 28px; background: black"></div>
+                <div style="width: 30.02px; height: 26.26px; background: black"></div>
+            </div>
+        </div>
+        <div style="left: 689px; top: 31px; position: absolute; color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">LOGO</div>
+        <div style="width: 67px; height: 0px; left: 140px; top: 65px; position: absolute; border: 1px #8A20F4 solid"></div>
+        <div style="width: 1180px; height: 600px; left: 140px; top: 112px; position: absolute">
+            <img style="width: 600px; height: 600px; left: 1312px; top: -5px; position: absolute; transform: rotate(180deg); transform-origin: 0 0" src="https://via.placeholder.com/600x600" />
+            <div style="width: 612px; left: 0px; top: 295px; position: absolute; color: #252525; font-size: 24px; font-family: Poppins; font-weight: 500; text-transform: capitalize; line-height: 30px; word-wrap: break-word">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <div style="width: 612px; left: 0px; top: 214px; position: absolute; color: black; font-size: 80px; font-family: Prociono; font-weight: 400; text-transform: capitalize; line-height: 30px; word-wrap: break-word">Hola,  Soy Latte</div>
+            <div style="width: 262px; height: 61px; left: 0px; top: 436px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
+                <div style="width: 262px; height: 61px; background: #8A20F4; border-radius: 8px"></div>
+                <div style="justify-content: flex-start; align-items: center; gap: 24px; display: inline-flex">
+                    <div style="width: 27px; height: 0px; transform: rotate(90deg); transform-origin: 0 0; border: 1.50px black solid"></div>
+                    <div style="color: black; font-size: 24px; font-family: Poppins; font-weight: 400; text-transform: capitalize; line-height: 30px; word-wrap: break-word">Discover now</div>
+                </div>
+            </div>
+        </div>
+        <div style="width: 1440px; height: 693px; left: 0px; top: 758px; position: absolute">
+            <div style="width: 1440px; height: 693px; left: 0px; top: 0px; position: absolute">
+                <div style="width: 1440px; height: 693px; left: 0px; top: 0px; position: absolute; background: #3BAA6F"></div>
+                <div style="width: 1268px; height: 556px; left: 52px; top: 65px; position: absolute; background: white"></div>
+                <div style="width: 273px; height: 563px; left: 1121px; top: 0px; position: absolute; background: #D9D9D9"></div>
+                <div style="left: 1224px; top: 223.50px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: center; gap: 32px; display: inline-flex">
+                    <div style="width: 64px; height: 64px; position: relative">
+                        <div style="width: 64px; height: 64px; left: 0px; top: 0px; position: absolute; background: #F2F2F2; border-radius: 9999px"></div>
+                        <div style="width: 28px; height: 32px; left: 18px; top: 16px; position: absolute">
+                            <div style="width: 27.12px; height: 28px; left: 0.44px; top: 2px; position: absolute; background: black"></div>
+                        </div>
+                    </div>
+                    <div style="text-align: center; color: black; font-size: 18px; font-family: Roboto; font-weight: 700; word-wrap: break-word">Amazon</div>
+                </div>
+            </div>
+            <img style="width: 452px; height: 271px; left: 186px; top: 251px; position: absolute; box-shadow: 0px 2.767256498336792px 2.2138051986694336px rgba(38, 31, 34, 0.02)" src="https://via.placeholder.com/452x271" />
+            <img style="width: 452px; height: 273px; left: 606px; top: 192px; position: absolute; box-shadow: 0px 2.767256498336792px 2.2138051986694336px rgba(38, 31, 34, 0.02)" src="https://via.placeholder.com/452x273" />
+            <img style="width: 452px; height: 269px; left: 317px; top: 115px; position: absolute; box-shadow: 0px 2.767256498336792px 2.2138051986694336px rgba(38, 31, 34, 0.02)" src="https://via.placeholder.com/452x269" />
+            <img style="width: 453px; height: 270px; left: 395px; top: 308px; position: absolute; box-shadow: 0px 2.767256498336792px 2.2138051986694336px rgba(38, 31, 34, 0.02)" src="https://via.placeholder.com/453x270" />
+        </div>
+        <div style="width: 1440px; height: 693px; left: 0px; top: 1515px; position: absolute">
+            <div style="width: 1440px; height: 693px; left: 0px; top: 0px; position: absolute; background: #765CE1"></div>
+            <div style="width: 1268px; height: 556px; left: 122px; top: 69px; position: absolute; background: white"></div>
+            <div style="width: 280px; height: 556px; left: 55px; top: 0px; position: absolute; background: #D9D9D9"></div>
+            <div style="left: 76px; top: 221px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: center; gap: 32px; display: inline-flex">
+                <div style="width: 116px; height: 64px; position: relative">
+                    <img style="width: 64px; height: 64px; left: 0px; top: 0px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/64x64" />
+                    <div style="width: 64px; height: 64px; left: 52px; top: 0px; position: absolute">
+                        <div style="width: 64px; height: 64px; left: 0px; top: 0px; position: absolute; background: #F2F2F2; border-radius: 9999px"></div>
+                        <div style="width: 28px; height: 32px; left: 18px; top: 16px; position: absolute">
+                            <div style="width: 27.12px; height: 28px; left: 0.44px; top: 2px; position: absolute; background: black"></div>
+                        </div>
+                    </div>
+                </div>
+                <div style="text-align: center"><span style="color: black; font-size: 18px; font-family: Roboto; font-weight: 700; word-wrap: break-word">James Wittings<br/></span><span style="color: black; font-size: 18px; font-family: Roboto; font-weight: 400; word-wrap: break-word">Marketing Director at Amazon</span></div>
+            </div>
+            <div style="width: 638px; left: 552px; top: 313px; position: absolute; text-align: center; color: black; font-size: 32px; font-family: Roboto; font-weight: 400; word-wrap: break-word">Working with Robert has been an absolute pleasure and we’ll definitely turn to his expertise for new projects.</div>
+            <div style="left: 1190px; top: 384px; position: absolute; text-align: center; color: #D9D9D9; font-size: 300px; font-family: Roboto; font-weight: 400; word-wrap: break-word">”</div>
+            <div style="left: 430px; top: 205px; position: absolute; text-align: center; color: #D9D9D9; font-size: 300px; font-family: Roboto; font-weight: 400; word-wrap: break-word">“</div>
+            <div style="width: 162px; height: 0px; left: 1239px; top: 415px; position: absolute; transform: rotate(-90deg); transform-origin: 0 0; border: 13px #D9D9D9 solid"></div>
+            <div style="width: 162px; height: 0px; left: 1284px; top: 415px; position: absolute; transform: rotate(-90deg); transform-origin: 0 0; border: 13px #D9D9D9 solid"></div>
+        </div>
+        <div style="width: 1440px; height: 693px; left: 0px; top: 2288px; position: absolute">
+            <div style="width: 1440px; height: 693px; left: 0px; top: 0px; position: absolute">
+                <div style="width: 1440px; height: 693px; left: 0px; top: 0px; position: absolute; background: #DC777B"></div>
+                <div style="width: 1268px; height: 556px; left: 52px; top: 65px; position: absolute; background: white"></div>
+                <div style="width: 273px; height: 563px; left: 1121px; top: 0px; position: absolute; background: #D9D9D9"></div>
+                <div style="left: 1224px; top: 223.50px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: center; gap: 32px; display: inline-flex">
+                    <div style="width: 64px; height: 64px; position: relative">
+                        <div style="width: 64px; height: 64px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 9999px"></div>
+                        <div style="width: 28px; height: 32px; left: 18px; top: 16px; position: absolute">
+                            <div style="width: 27.12px; height: 28px; left: 0.44px; top: 2px; position: absolute; background: black"></div>
+                        </div>
+                    </div>
+                    <div style="text-align: center; color: black; font-size: 18px; font-family: Roboto; font-weight: 700; word-wrap: break-word">Amazon</div>
+                </div>
+            </div>
+            <img style="width: 809px; height: 460px; left: 223px; top: 122px; position: absolute; box-shadow: 0px 2.767256498336792px 2.2138051986694336px rgba(38, 31, 34, 0.02)" src="https://via.placeholder.com/809x460" />
+        </div>
+        <div style="width: 1440px; height: 499px; left: 0px; top: 3028px; position: absolute; background: #D9D9D9">
+            <div style="width: 1440px; height: 499px; left: 0px; top: 0px; position: absolute; background: white"></div>
+            <div style="width: 1440px; height: 0px; left: 0px; top: 377px; position: absolute; border: 0.50px black solid"></div>
+            <div style="left: 1093px; top: 129.50px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 1px; display: inline-flex">
+                <div style="color: #C64CFF; font-size: 32px; font-family: Heebo; font-weight: 700; word-wrap: break-word">Contact here</div>
+                <div style="color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">+57 xxxxxxxxxx</div>
+                <div style="color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">hello@robert.com</div>
+            </div>
+            <div style="left: 140px; top: 66.50px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 58px; display: inline-flex">
+                <div style="width: 639px; color: black; font-size: 32px; font-family: Heebo; font-weight: 700; word-wrap: break-word">If you’re looking for a designer and developer that likes to get stuff done, let’s talk.</div>
+                <div style="justify-content: flex-start; align-items: center; gap: 22px; display: inline-flex">
+                    <div style="color: black; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">Got a project in mind?</div>
+                    <div style="padding-left: 17px; padding-right: 17px; padding-top: 5px; padding-bottom: 5px; background: linear-gradient(90deg, #C64CFF 0%, #AB40FF 100%, #37253F 100%, #1E1E1E 100%, #AB40FF 100%); border-radius: 9px; overflow: hidden; border: 0.50px #C64CFF solid; justify-content: center; align-items: center; gap: 10px; display: flex">
+                        <div style="color: #D9D9D9; font-size: 24px; font-family: Heebo; font-weight: 400; word-wrap: break-word">Let’s talk</div>
+                    </div>
+                </div>
+            </div>
+            <div style="left: 133.50px; top: 426.50px; position: absolute; justify-content: flex-start; align-items: center; gap: 205px; display: inline-flex">
+                <div style="color: black; font-size: 20px; font-family: Heebo; font-weight: 500; word-wrap: break-word">(c) Copyright All rights reserved.</div>
+                <div style="justify-content: center; align-items: center; gap: 16px; display: flex">
+                    <div style="color: black; font-size: 20px; font-family: Heebo; font-weight: 500; text-decoration: underline; word-wrap: break-word">Privacy Policy</div>
+                    <div style="color: black; font-size: 20px; font-family: Heebo; font-weight: 500; text-decoration: underline; word-wrap: break-word">Terms & Conditions</div>
+                </div>
+                <div style="justify-content: flex-end; align-items: center; gap: 45px; display: flex">
+                    <div style="width: 19.69px; height: 16px; background: black"></div>
+                    <div style="width: 12px; height: 28px; background: black"></div>
+                    <div style="width: 30.02px; height: 26.26px; background: black"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
